# 100-days-of-code

./: .gitignore  LICENSE  README.md
day-1/: README.md
day-1/AutoFishRework/: AutoFishRework.sln
day-1/AutoFishRework/AutoFishRework/: AutoFishRework.csproj  GameState.cs  ModConfig.cs  ModEntry.cs
day-1/AutoFishRework_mod/: config.json  manifest.json
day-10/: main.rs
day-11/: main.rs
day-12/: main.rs
day-2/: README.md
day-2/blink/: CMakeLists.txt  blink.c
day-2/blink_minimal/: Makefile  blink.elf  blink.list  blink.s  blink.uf2  boot_stage2.ld
day-3/: README.md
day-3/pico-blink/: Cargo.toml
day-3/pico-blink/src/: main.rs
day-4/: README.md  main.rs
day-5/: README.md  main.rs
day-6/: main.rs
day-7/: main.rs
day-8/: main.rs
day-9/: main.rs
